# omc

./: .gitmodules  Cargo.toml
bytecode-source-map/: Cargo.toml
bytecode-source-map/src/: mapping.rs  source_map.rs
common/: Cargo.toml
common/src/types/: language_storage.rs  mod.rs  vm_status.rs
compiler/: Cargo.toml
compiler/bytecode-source-map/: Cargo.toml
compiler/bytecode-source-map/src/: marking.rs  source_map.rs  utils.rs
compiler/ir/: Cargo.toml
compiler/ir/src/: lib.rs  main.rs  util.rs
compiler/ir/to-bytecode/: Cargo.toml
compiler/ir/to-bytecode/src/: compiler.rs  context.rs  errors.rs  parser.rs
compiler/ir/to-bytecode/syntax/: Cargo.toml
compiler/ir/to-bytecode/syntax/src/: lexer.rs  syntax.rs
compiler/ir/types/: Cargo.toml
compiler/ir/types/src/: ast.rs  spec_language_ast.rs
compiler/src/: interface_generator.rs  lib.rs
compiler/src/cfgir/: ast.rs  mod.rs  translate.rs
compiler/src/cfgir/borrows/: mod.rs  state.rs
compiler/src/cfgir/liveness/: mod.rs
compiler/src/errors/: mod.rs
compiler/src/expansion/: byte_string.rs  translate.rs
compiler/src/hlir/: translate.rs
compiler/src/ir_types/: ast.rs  location.rs  mod.rs  spec_language_ast.rs
compiler/src/naming/: translate.rs
compiler/src/parser/: ast.rs  lexer.rs  syntax.rs
compiler/src/shared/: ast_debug.rs  mod.rs
compiler/src/to_bytecode/: context.rs  mod.rs  remove_fallthrough_jumps.rs  translate.rs
compiler/src/typing/: ast.rs  expand.rs  infinite_instantiations.rs  translate.rs
ir/: Cargo.toml
ir/src/: lib.rs  main.rs  util.rs
ir/to-bytecode/: Cargo.toml
ir/to-bytecode/src/: compiler.rs  context.rs  parser.rs
ir/to-bytecode/syntax/: Cargo.toml
ir/to-bytecode/syntax/src/: syntax.rs
ir/types/: Cargo.toml
ir/types/src/: ast.rs  spec_language_ast.rs
src/: compiled_unit.rs  interface_generator.rs  lib.rs
src/cfgir/: ast.rs  cfg.rs  constant_fold.rs  eliminate_locals.rs  translate.rs
src/cfgir/locals/: mod.rs  state.rs
src/expansion/: aliases.rs  ast.rs  hex_string.rs
src/hlir/: ast.rs
src/naming/: ast.rs  uses.rs
src/shared/: mod.rs
src/to_bytecode/: context.rs  translate.rs
src/typing/: core.rs  globals.rs  recursive_structs.rs
vm/: Cargo.toml
vm/core/src/: file_format.rs  serializer.rs
vm/runtime/src/: interpreter.rs
vm/src/: lib.rs
