[package]
name = "outmove"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"
description = "A VM, compiler and bytecode definition built on top of Move."
license = "Apache-2.0"

[dependencies]

[workspace]
members = [
    "compiler",
    "vm",
    "vm/core",
    "vm/natives",
    "vm/types",
    "vm/borrow-graph",
    "common",
]