[package]
name = "outmove"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"
description = "A VM, compiler and bytecode definition built on top of Move."
license = "Apache-2.0"

[dependencies]

[workspace]
members = [
    "compiler",
    "compiler/bytecode-source-map",
    "compiler/ir",
    "compiler/ir/types",
    "compiler/ir/to-bytecode",
    "vm",
    "vm/core",
    "vm/natives",
    "vm/types",
    "vm/bytecode-verifier",
    "utils/borrow-graph",
    "common",
]