[package]
name = "omc-bytecode-source-map"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.38"
omv-primitives = { path = "../vendor/omv/primitives", version = "0.1.0" }
omc-ir-types = { path = "../ir/types", version = "0.1.0" }
omv-core = { path = "../vendor/omv/core", version = "0.1.0" }
bcs = { package = "omv-serialize", path = "../vendor/omv/serialize" }
codespan = "0.8.0"
codespan-reporting = "0.8.0"
serde = { version = "1.0.123", default-features = false }