[package]
name = "omc"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"
description = "The compiler for Outmove."
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
codespan = { version = "0.11", features = ["serialization"] }
once_cell = "1.4.1"
anyhow = "1.0.38"
hex = "0.4.2"
common = { package = "outmove-common", version = "0.1", path = "../common" }