[package]
name = "omc-ir"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.38"
omv-primitives = { path = "../vendor/omv/primitives", version = "0.1.0" }
omv-bytecode-verifier = { path = "../vendor/omv/bytecode-verifier", version = "0.1.0" }
omc-ir-to-bytecode = { path = "to-bytecode", version = "0.1.0" }
omc-bytecode-source-map = { path = "../bytecode-source-map", version = "0.1.0" }
omc-ir-types = { path = "types", version = "0.1.0" }
omv-core = { path = "../vendor/omv/core", version = "0.1.0" }
bcs = { package = "omv-serialize", path = "../vendor/omv/serialize" }
structopt = "0.3.21"
serde_json = "1.0.62"