[package]
name = "omc-bytecode-source-map"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.38"
common = { package = "outmove-common", path = "../../common", version = "0.1.0" }
omc-ir-types = { path = "../ir/types", version = "0.1.0" }
omv-core = { path = "../../vm/core", version = "0.1.0" }
bcs = "0.1.2"
codespan = "0.8.0"
codespan-reporting = "0.8.0"
serde = { version = "1.0.123", default-features = false }

[features]
default = []