[package]
name = "omc-ir-to-bytecode"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.38"
omc-ir-to-bytecode-syntax = { path = "syntax", version = "0.1.0" }
omv-primitives = { path = "../../vendor/omv/primitives", version = "0.1.0" }
omc-ir-types = { path = "../types", version = "0.1.0" }
omv-core = { path = "../../vendor/omv/core", version = "0.1.0" }
omc-bytecode-source-map = { path = "../../bytecode-source-map", version = "0.1.0" }
log = "0.4.14"
codespan = "0.8.0"
codespan-reporting = "0.8.0"
thiserror = "1.0.23"
rental = "0.5.4"

[features]
default = []
