[package]
name = "omc-ir-types"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.38"
codespan = { version = "0.8.0", features = ["serialization"] }
serde = { version = "1.0.123", features = ["derive"] }
hex = "0.4.2"
once_cell = "1.4.1"
omv-primitives = { path = "../../vendor/omv/primitives" }
