[package]
name = "omc-ir-to-bytecode-syntax"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.38"
codespan = { version = "0.8.0", features = ["serialization"] }
hex = "0.4.2"
omc-ir-types = { path = "../../types", version = "0.1.0" }
omv-primitives = { path = "../../../vendor/omv/primitives" }
